# CrabClaw

./: .gitignore  CLAUDE.md  Dockerfile.gateway  LICENSE  Makefile  README.md  SOUL.md  STARTUP.md  Sandbox-Architecture.md  docker-compose.yml  start.bat
.github/workflows/: desktop-release.yml
backend/: Makefile  go.mod  go.sum
backend/cmd/acosmi/: main.go
backend/cmd/browser-mcp/: main.go
backend/cmd/desktop/: Taskfile.yml  assets.go  embed_release.go  embed_stub.go  install_kind.go  install_kind_test.go  main.go  main_wails.go  platform_runtime.go  runtime.go  runtime_test.go  updater_finalize.go  updater_handoff_finalize.go  updater_state.go  updater_state_test.go  wails_app.go
backend/cmd/gen-frontend/: main.go
backend/cmd/native-host/: main.go
backend/cmd/openacosmi/: cmd_browser.go  cmd_doctor.go  cmd_gateway.go  cmd_logs.go  cmd_misc.go  cmd_models.go  cmd_nodes.go  cmd_plugins.go  cmd_sandbox.go  cmd_setup.go  cmd_status.go  main.go  setup_auth_apply.go  setup_auth_options.go  setup_channels.go  setup_hooks.go  setup_skills.go
backend/internal/acp/: types.go
backend/internal/autoreply/: commands_data.go  commands_handler_bash.go
backend/internal/browser/: cdp.go  chrome.go  chrome_profile_decoration.go  extension_relay.go  extension_relay_test.go  gif_recorder.go  lazy_controller.go  pw_playwright_browser.go  pw_tools_cdp.go
backend/internal/channels/: channels.go  onboarding_imessage.go  onboarding_signal.go  onboarding_slack.go  onboarding_test.go  onboarding_whatsapp.go  outbound.go  plugin_helpers.go  send_errors.go  status_issues.go
backend/internal/cli/: banner.go  cli_test.go  config_guard.go  dotenv.go  dotenv_test.go  route.go  utils.go  version.go
backend/internal/config/: config_test.go  features.go  features_test.go  keyring.go  loader.go  paths.go  schema_generate.go  schema_hints_data.go  schema_test.go  shellenv.go  shellenv_test.go  validator.go  validator_test.go
backend/internal/daemon/: constants.go  constants_test.go  inspect.go  systemd_hints_linux.go  (+1 more)
browser-extension/: background.js  manifest.json  popup.html  popup.js
cli-rust/: Cargo.toml  TRACKING.md
cli-rust/crates/oa-cli/: Cargo.toml  build.rs
cli-rust/crates/oa-cli-shared/src/: agent_events.go  agent_events_test.go  approval_forwarder.go  approval_forwarder_ops.go  archive.go  banner.rs  binary_name.rs  bonjour.go  bonjour_zeroconf.go  bonjour_zeroconf_test.go  canvas_host_url.go  channel_activity.go  channel_summary.go  command_format.rs  config_guard.rs  control_ui_assets.go  dedupe.go  device_auth_store.go  device_identity.go  diagnostic_events.go  diagnostic_flags.go  discovery.go  env_compat.go  env_vars.go  exec_approvals.go  exec_approvals_ops.go  exec_host.go  exec_safety.go  fetch_guard.go  fs_safe.go  gateway_lock.go  gateway_lock_unix.go  gateway_lock_windows.go  git_commit.go  heartbeat.go  heartbeat_delivery.go  heartbeat_delivery_run.go  heartbeat_events.go  heartbeat_test.go  heartbeat_visibility.go  (+53 more)
cli-rust/crates/oa-cli-shared/src/cost/: cost_summary.go  cost_test.go  provider_auth.go  provider_fetch.go  provider_fetch_claude.go  provider_fetch_codex.go  provider_fetch_copilot.go  provider_fetch_gemini.go  provider_fetch_minimax.go  provider_fetch_test.go  provider_fetch_zai.go  provider_format.go  provider_shared.go  provider_types.go  session_cost.go  types.go
cli-rust/crates/oa-cli-shared/src/errors/: errors.go  errors_test.go
cli-rust/crates/oa-cli/src/: commands.rs  lib.rs
cli-rust/crates/oa-cmd-acp/src/: lib.rs
cli-rust/crates/oa-cmd-agent/src/: agent_command.rs  agent_via_gateway.rs  lib.rs
cli-rust/crates/oa-cmd-agents/src/: command_shared.rs  lib.rs  list.rs
cli-rust/crates/oa-cmd-approvals/src/: lib.rs
cli-rust/crates/oa-cmd-auth/src/: lib.rs
cli-rust/crates/oa-cmd-browser/src/: lib.rs
cli-rust/crates/oa-cmd-channels/src/: lib.rs  shared.rs
cli-rust/crates/oa-cmd-config/src/: get.rs  lib.rs  set.rs  unset.rs
cli-rust/crates/oa-cmd-configure/src/: lib.rs  wizard.rs
cli-rust/crates/oa-cmd-cron/src/: lib.rs
cli-rust/crates/oa-cmd-daemon/src/: lib.rs
cli-rust/crates/oa-cmd-devices/src/: lib.rs
cli-rust/crates/oa-cmd-directory/src/: lib.rs
cli-rust/crates/oa-cmd-dns/src/: lib.rs
cli-rust/crates/oa-cmd-doctor/src/: auth.rs  completion.rs  config_flow.rs  format.rs  lib.rs  platform_notes.rs  security.rs  state_integrity.rs  update.rs
cli-rust/crates/oa-cmd-gateway/src/: lib.rs  run.rs
cli-rust/crates/oa-cmd-health/src/: lib.rs
cli-rust/crates/oa-cmd-hooks/src/: lib.rs
cli-rust/crates/oa-cmd-logs/src/: lib.rs
cli-rust/crates/oa-cmd-memory/src/: lib.rs
cli-rust/crates/oa-cmd-models/src/: lib.rs  shared.rs
cli-rust/crates/oa-cmd-node/src/: lib.rs
cli-rust/crates/oa-cmd-onboard/src/: channels.rs  hooks.rs  lib.rs  non_interactive.rs  remote.rs
cli-rust/crates/oa-cmd-packages/: Cargo.toml
cli-rust/crates/oa-cmd-packages/src/: lib.rs
cli-rust/crates/oa-cmd-pairing/src/: lib.rs
cli-rust/crates/oa-cmd-plugins/src/: lib.rs
cli-rust/crates/oa-cmd-sandbox/src/: display.rs  explain.rs  lib.rs
cli-rust/crates/oa-cmd-security/src/: lib.rs
cli-rust/crates/oa-cmd-sessions/src/: lib.rs
cli-rust/crates/oa-cmd-skills/src/: lib.rs
cli-rust/crates/oa-cmd-status/src/: gateway_probe.rs  lib.rs  status_all.rs  status_command.rs  types.rs  update.rs
cli-rust/crates/oa-cmd-supporting/src/: cleanup_utils.rs  daemon_install_helpers.rs  daemon_runtime.rs  dashboard.rs  desktop.rs  docs.rs  lib.rs  message.rs  message_format.rs  reset.rs  setup.rs  signal_install.rs  systemd_linger.rs  uninstall.rs
cli-rust/crates/oa-cmd-system/src/: lib.rs  presence.rs
cli-rust/crates/oa-cmd-tui/src/: lib.rs
cli-rust/crates/oa-cmd-update/src/: lib.rs
cli-rust/crates/oa-cmd-voicecall/src/: lib.rs
cli-rust/crates/oa-cmd-webhooks/src/: lib.rs
cli-rust/crates/oa-config/src/: paths.rs
cli-rust/crates/oa-gateway-rpc/src/: call.rs
cli-rust/crates/oa-infra/src/: env.rs  home_dir.rs
scripts/: start.sh
scripts/desktop/: stage_control_ui.sh
ui/: index.html  vite.config.ts
ui/src/: styles.css
(+403 files in other folders)
