[package]
name = "oa-cmd-packages"
description = "Package management commands"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
oa-config.workspace = true
oa-cli-shared.workspace = true
oa-gateway-rpc.workspace = true
oa-terminal.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

[lints]
workspace = true
